# reservation

./: .env  Cargo.toml  README.md  deny.toml
abi/: Cargo.toml  build.rs
abi/protos/: reservation.proto
abi/src/: error.rs  lib.rs  utils.rs
abi/src/error/: conflict.rs  mod.rs
abi/src/pb/: mod.rs  reservation.rs
abi/src/types/: mod.rs  reservation.rs  reservation_query.rs  reservation_status.rs
migrations/: 20221120140006_init.up.sql  20221120142843_reservation.up.sql  20221120143242_reservation_trigger.down.sql  20221120143242_reservation_trigger.up.sql  20221120143612_reservation_func.up.sql
reservation/: Cargo.toml
reservation/src/: lib.rs  manager.rs
